--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -10,7 +10,7 @@
                    value="{{ form.username.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
-            <label for="password">비밀번호</label>
+            <label for="password">비밀번호486</label>
             <input type="password" class="form-control" name="password" id="password"
                    value="{{ form.password.value|default_if_none:'' }}">
         </div>
