--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,13 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item ">
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                <a class="nav-link" href="{% url 'common:changepw' %}">비밀번호 변경</a>
+                
+                {% else %}
                 <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+                {% endif %}
             </li>
         </ul>
     </div>
