--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,19 +1,21 @@
+{% include "navbar.html" %}
+
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 <div class="container my-3">
-    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
+    <h2 class="border-bottom py-2">{{ article.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="card-text" style="white-space: pre-line;">{{ article.content }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge badge-light p-2">
-                    {{ question.create_date }}
+                    {{ article.create_date }}
                 </div>
             </div>
         </div>
     </div>
-    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}
+    <h5 class="border-bottom my-3 py-2">{{article.answer_set.count}}개의 답변이 있습니다.</h5>
+    {% for answer in article.answer_set.all %}
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
@@ -25,11 +27,12 @@
         </div>
     </div>
     {% endfor %}
-    <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
+    <form action="{% url 'pybo:answer_create' article.id %}" method="post" class="my-3">
         {% csrf_token %}
         <div class="form-group">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
-        </div>
+            <textarea {% if not user.is_authenticated %}disabled{% endif %}
+                name="content" id="content" class="form-control" rows="10"></textarea>      
+              </div>
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
